<resources>
	<!-- Welcome Screen -->
    <string name="app_name">The Movie App</string>
    <string name="welcome_msg">Welcome to your Collection</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_video_collection">Video Collection</string>
    <string name="gallery">Movie Collection</string>
    <string name="load_create">Load/Create</string>
    <string name="extra">Extra</string>
    <color name="black">#ff000000</color>
    <color name="white">#ffffffff</color>

    <!-- Movie Form -->
    <string name="m_title">Title: </string>
    <string name="m_title_hint">Breakfast Club</string>
    <string name="m_genre">Genre: </string>
    <string name="m_genre_hint">Action</string>
    <string name="release">Release Date: </string>
    <string name="release_hint">2099 </string>
    
    <!-- Archive -->
    <string name="whos"> Mommas </string>
    <string name="count"> 0 Movies (Start Collecting) </string>
    <string name="last_updated"> New </string>
    <string name="favorite"> Favorite Move:  </string>
    <string name="f_movie"> Fast Times at Ridgmont High </string>
    <string name="barcode">Barcode</string>
    <string name="barcode_hint">Menu -&gt; Scan Barcode</string>
    
</resources>