<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_msg"
        android:textColor="@color/white"
        android:textSize="32dp" 
        android:gravity="center"/>

    <Button
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/welcome_msg"
        android:text="@string/gallery"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/load_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gallery"
        android:text="@string/load_create"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/load_create"
        android:text="@string/extra"
        android:textColor="@color/white" />

</RelativeLayout>
