<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <TextView
        android:id="@+id/whos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/whos"
        android:textColor="@color/white"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:gravity="center"
        android:text="@string/count"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/count"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:gravity="center"
        android:text="@string/favorite"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/favorite"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:gravity="center"
        android:text="@string/last_updated"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/f_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/f_movie"
        android:textColor="@color/white"
        android:textSize="18dp" />

</RelativeLayout>